--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,18 @@ input:checked + label {
   background-color: rgb(105, 120, 183);
 }
 
-input.green + label {
+#green + label {
   background-color: aqua;
+}
+
+input#correct + label {
+  background-color: aqua;
+}
+
+input#incorrect + label {
+  background-color: rgb(255, 0, 0);
+}
+
+input#not-selected + label {
+  background-color: rgb(255, 255, 255);
 }
