--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
 .App {
   background-color: #f5f7fb;
-  width: 500px;
-  height: 500px;
+  width: 550px;
+  min-height: 500px;
+  padding: 30px 50px;
+  border-radius: 6px;
+  background-image: url("./blobs-1.png"), url("./blobs-2.png");
+  background-repeat: no-repeat;
+  background-position: 170% -50%, -20% 120%;
 }
 
 /* input[type="radio"] {
@@ -16,30 +21,178 @@ label {
   background-color: #f0f0f0;
   width: 10em;
   text-align: center;
+} */
+/* input[type="radio"] {
+  opacity: 0;
+  position: fixed;
+  width: 0;
 }
-
-input:checked + label {
-  background-color: #a91414;
+label {
+  display: inline-block;
+  background-color: #ddd;
+  padding: 10px 20px;
+  font-family: sans-serif, Arial;
+  font-size: 16px;
+  border: 2px solid #444;
+  border-radius: 4px;
 } */
 
-/* [type="radio"] */
-
-input:checked + label {
-  background-color: rgb(105, 120, 183);
+input[type="radio"]:checked + label {
+  background: #be8c20;
+  border-radius: 4px;
 }
 
-#green + label {
-  background-color: aqua;
+#correct {
+  background-color: #94d7a2;
+  border: none;
 }
 
-input#correct + label {
-  background-color: aqua;
+#incorrect {
+  background-color: #f8bcbc;
+  border: none;
+  color: #4d5b9e;
 }
 
-input#incorrect + label {
-  background-color: rgb(255, 0, 0);
+#not-selected {
+  border: 0.7px solid #4d5b9e;
+  color: #4d5b9e;
 }
 
-input#not-selected + label {
-  background-color: rgb(255, 255, 255);
+.Menu {
+  background-image: url("./intro-page.png");
+  width: 550px;
+  height: 500px;
+  border-radius: 6px;
+}
+.Menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.Menu h1 {
+  font-family: "Karla";
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 37px;
+  text-align: center;
+  color: #293264;
+}
+
+.Menu p {
+  font-family: "Inter";
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  color: #293264;
+  margin: 20px;
+}
+
+.Menu button {
+  background: #4d5b9e;
+  border-radius: 15px;
+  width: 193px;
+  height: 52px;
+  font-family: "Inter";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  color: #f5f7fb;
+  border: none;
+}
+
+.QuestionBlock p {
+  font-family: "Karla";
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  color: #293264;
+  margin: 15px 0 12px 0;
+}
+.QuestionBlock {
+  border-bottom: 0.7px solid #dbdef0;
+}
+.button {
+  background-color: transparent;
+  border: 0.7px solid #4d5b9e;
+  border-radius: 8px;
+  padding: 4px 20px;
+  margin: 0 13px 13px 0;
+  color: #293264;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 10.24px;
+  line-height: 12px;
+  /* identical to box height */
+
+  text-align: center;
+}
+
+.selected {
+  background-color: #d6dbf5;
+}
+/* 
+border: 0.794239px solid #DBDEF0; */
+
+.checkButton {
+  display: block;
+  background: #4d5b9e;
+  border-radius: 10px;
+  font-family: "Inter";
+  font-weight: 600;
+  font-size: 10px;
+  line-height: 12px;
+  text-align: center;
+  color: #f5f7fb;
+  border: none;
+  padding: 12px 22px;
+  margin: 0 auto;
+  white-space: nowrap;
+  margin-top: 20px;
+}
+
+.scoreText {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12.8px;
+  line-height: 15px;
+  text-align: center;
+  color: #293264;
+  margin-right: 13px;
+}
+
+.playAgain {
+  background: #4d5b9e;
+  border-radius: 10px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 10.24px;
+  line-height: 12px;
+  text-align: center;
+
+  color: #f5f7fb;
+  padding: 9px 20px;
+  border: none;
+}
+
+.App .finishedGame {
+  margin-top: 20px;
+}
+
+@media screen and (max-width: 480px) {
+  .Menu {
+    width: 90vw;
+  }
+  .App {
+    width: 90vw;
+  }
+  .button {
+    margin: 0 10px 10px 0;
+  }
 }
