--- a/src/App.css
+++ b/src/App.css
@@ -192,7 +192,7 @@ border: 0.794239px solid #DBDEF0; */
   .App {
     width: 90vw;
   }
-  .button {
+  /* .button {
     margin: 0 10px 10px 0;
-  }
+  } */
 }
