--- a/src/index.css
+++ b/src/index.css
@@ -9,13 +9,22 @@ font-family: 'Karla', sans-serif; 700*/
   box-sizing: border-box;
 }
 
-html,
+/* html,
 body {
   margin: 10px 0;
-}
+} */
 
 body {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 30px 0;
+}
+
+@media screen and (max-width: 480px) {
+  /* html,
+  body {
+    height: 100vh;
+    padding: 30px;
+  } */
 }
