--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@500;600&family=Karla:wght@700&display=swap");
 
-/* font-family: 'Inter', sans-serif; 500, 600
-font-family: 'Karla', sans-serif; 700*/
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
-/* html,
-body {
-  margin: 10px 0;
-} */
 
 body {
   display: flex;
@@ -21,10 +13,175 @@ body {
   padding: 30px 0;
 }
 
+.App {
+  background-color: #f5f7fb;
+  width: 550px;
+  min-height: 500px;
+  padding: 30px 50px;
+  border-radius: 6px;
+  background-image: url("./images/blobs-1.png"), url("./images/blobs-2.png");
+  background-repeat: no-repeat;
+  background-position: top -150px right -100px, bottom -70px left -70px;
+}
+
+#correct {
+  background-color: #94d7a2;
+  border: none;
+}
+
+#incorrect {
+  background-color: #f8bcbc;
+  border: none;
+  color: #8f94af;
+}
+
+#notSelected {
+  border: 0.7px solid #8f94af;
+  color: #8f94af;
+}
+
+.Menu {
+  width: 550px;
+  height: 93vh;
+  border-radius: 6px;
+  background-image: url("./images/blobs-1.png"), url("./images/blobs-2.png");
+  background-repeat: no-repeat;
+  background-position: top -100px right -100px, bottom -100px left -100px;
+  background-color: #f5f7fb;
+}
+
+.Menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.Menu h1 {
+  font-family: "Karla";
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 37px;
+  text-align: center;
+  color: #293264;
+}
+
+.Menu p {
+  font-family: "Inter";
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  color: #293264;
+  margin: 20px;
+}
+
+.Menu button {
+  background: #4d5b9e;
+  border-radius: 15px;
+  width: 193px;
+  height: 52px;
+  font-family: "Inter";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  color: #f5f7fb;
+  border: none;
+  cursor: pointer;
+}
+
+.QuestionBlock p {
+  font-family: "Karla";
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  color: #293264;
+  margin: 15px 0 12px 0;
+}
+.QuestionBlock {
+  border-bottom: 0.7px solid #dbdef0;
+}
+.button {
+  background-color: transparent;
+  border: 0.7px solid #4d5b9e;
+  border-radius: 8px;
+  padding: 4px 20px;
+  margin: 0 13px 13px 0;
+  color: #293264;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 10.24px;
+  line-height: 12px;
+  /* identical to box height */
+
+  text-align: center;
+  cursor: pointer;
+}
+
+.selected {
+  background-color: #d6dbf5;
+}
+
+.checkButton {
+  display: block;
+  background: #4d5b9e;
+  border-radius: 10px;
+  font-family: "Inter";
+  font-weight: 600;
+  font-size: 10px;
+  line-height: 12px;
+  text-align: center;
+  color: #f5f7fb;
+  border: none;
+  padding: 12px 22px;
+  margin: 0 auto;
+  white-space: nowrap;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.scoreText {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12.8px;
+  line-height: 15px;
+  text-align: center;
+  color: #293264;
+  margin-right: 13px;
+  margin-bottom: 13px;
+}
+
+.playAgain {
+  background: #4d5b9e;
+  border-radius: 10px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 10.24px;
+  line-height: 12px;
+  text-align: center;
+  color: #f5f7fb;
+  padding: 9px 20px;
+  border: none;
+  cursor: pointer;
+  margin-top: 13px;
+}
+
+.App .finishedGame {
+  margin-top: 20px;
+}
+
 @media screen and (max-width: 480px) {
-  /* html,
-  body {
-    height: 100vh;
-    padding: 30px;
-  } */
+  .Menu {
+    width: 90vw;
+  }
+  .App {
+    width: 90vw;
+  }
+  .button {
+    margin: 0 10px 10px 0;
+  }
 }
