--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@500;600&family=Karla:wght@700&display=swap");
-
 * {
   margin: 0;
   padding: 0;
@@ -10,23 +9,23 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: row;
   padding: 30px 0;
 }
 
 .Menu {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   width: 550px;
   height: 93vh;
   border-radius: 6px;
-  background-image: url("./images/blobs-1.png"), url("./images/blobs-2.png");
+  background-image: url("../images/blobs-1.png"), url("../images/blobs-2.png");
   background-repeat: no-repeat;
   background-position: top -100px right -100px, bottom -100px left -100px;
   background-color: #f5f7fb;
 }
-
 .Menu h1 {
   font-family: "Karla";
   font-weight: 700;
@@ -35,7 +34,6 @@ body {
   text-align: center;
   color: #293264;
 }
-
 .Menu p {
   font-family: "Inter";
   font-weight: 400;
@@ -45,7 +43,6 @@ body {
   color: #293264;
   margin: 20px;
 }
-
 .Menu button {
   background: #4d5b9e;
   border-radius: 15px;
@@ -60,7 +57,6 @@ body {
   border: none;
   cursor: pointer;
 }
-
 .Menu button:hover {
   background: #3d4d9c;
 }
@@ -70,12 +66,11 @@ body {
   min-height: 500px;
   padding: 30px 50px;
   border-radius: 6px;
-  background-image: url("./images/blobs-1.png"), url("./images/blobs-2.png");
+  background-image: url("../images/blobs-1.png"), url("../images/blobs-2.png");
   background-repeat: no-repeat;
   background-color: #f5f7fb;
   background-position: top -150px right -100px, bottom -70px left -70px;
 }
-
 .App .checkButton {
   display: block;
   background: #4d5b9e;
@@ -92,11 +87,9 @@ body {
   white-space: nowrap;
   cursor: pointer;
 }
-
 .App .checkButton:hover {
   background: #3d4d9c;
 }
-
 .App .scoreText {
   font-family: "Inter";
   font-weight: 700;
@@ -106,7 +99,6 @@ body {
   color: #293264;
   margin: 0 13px 13px 0;
 }
-
 .App .playAgain {
   background: #4d5b9e;
   border-radius: 10px;
@@ -121,19 +113,16 @@ body {
   margin-top: 13px;
   cursor: pointer;
 }
-
 .App .playAgain:hover {
   background: #3d4d9c;
 }
-
 .App .finishedGame {
   margin-top: 20px;
 }
 
 .QuestionBlock {
-  border-bottom: 0.7px solid #dbdef0;
+  border-bottom: 0.7px solid #d6dbf5;
 }
-
 .QuestionBlock p {
   font-family: "Karla";
   font-weight: 700;
@@ -142,7 +131,6 @@ body {
   color: #293264;
   margin: 15px 0 12px 0;
 }
-
 .QuestionBlock .button {
   border: 0.7px solid #4d5b9e;
   border-radius: 8px;
@@ -156,27 +144,22 @@ body {
   text-align: center;
   cursor: pointer;
 }
-
 .QuestionBlock .button:hover {
   background-color: #d6dbf5;
 }
-
-.selected {
+.QuestionBlock .selected {
   background-color: #d6dbf5;
 }
-
-#correct {
+.QuestionBlock #correct {
   background-color: #94d7a2;
   border: none;
 }
-
-#incorrect {
+.QuestionBlock #incorrect {
   background-color: #f8bcbc;
   border: none;
   color: #8f94af;
 }
-
-#notSelected {
+.QuestionBlock #notSelected {
   border: 0.7px solid #8f94af;
   color: #8f94af;
 }
@@ -191,4 +174,4 @@ body {
   .button {
     margin: 0 10px 10px 0;
   }
-}
+}/*# sourceMappingURL=index.css.map */
